Wed Aug 24 07:57:43 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 1.8.9.  Fixes uninstalling multiple
	  gems and gem cleanup.

Wed Aug 24 06:45:20 2011  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*: Imported minitest 2.5.0 (r6557)
	* test/minitest/*: ditto

Wed Aug 24 00:38:22 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c (update_coverage): skip coverage count up if the current
	  line is out of the way.  rb_sourceline() is unreliable when source
	  code is big.  [ruby-dev:44413]

	* test/coverage/test_coverage.rb: add a test for above.

Tue Aug 23 15:23:56 2011  Eric Hodel  <drbrain@segment7.net>

	* load.c (rb_f_require):  Improve documentation of Kernel#require.
	  [Ruby 1.9 - Bug #5210]

Tue Aug 23 11:27:26 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_read_header): Ensure that each section of
	  gzip header is readable to avoid SEGV.

	* test/zlib/test_zlib.rb (test_corrupted_header): Test it.

Mon Aug 22 23:43:33 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* sprintf.c (rb_str_format): add RB_GC_GUARD to prevent temporary
	  strings from GC.

Sun Aug 21 17:49:53 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* iseq.c (iseq_s_disasm): remove variable which is no longer used
	  since r33013.

Sun Aug 21 14:20:58 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* configure.in: use LD_LIBRARY_PATH_64 on 64-bit Solaris.

Sat Aug 20 13:19:52 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* iseq.c (iseq_s_disasm): fix a bug that may cause SEGV.

	* test/ruby/test_method.rb (test_body): add a test for the above change.

Sat Aug 20 10:43:24 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_read): return new string if nil
	  is explicitly given as a buffer ([Bug #5207]), otherwise set the
	  encoding.  also removed dead code.

Fri Aug 19 14:25:51 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_spawn_v, proc_spawn): should not wait the