@@ -1,3 +1,5 @@
+# coding: US-ASCII
+
 #--
 #   irb/ruby-lex.rb - ruby lexcal analyzer
 #   	$Release Version: 0.9.5$
